# api/v1/setting/entity.go
@@ -101,3 +101,15 @@ type Customer struct {
 	Updated           time.Time `db:"updated" json:"updated"`
 	UpdatedBy         string    `db:"updated_by" json:"updated_by"`
 }
+
+type Carrier struct {
+	ID             int64     `db:"id" json:"id"`
+	CarrierID      string    `db:"carrier_id" json:"carrier_id"`
+	OrganizationID string    `db:"organization_id" json:"organization_id"`
+	Name           string    `db:"name" json:"name"`
+	Status         int       `db:"status" json:"status"`
+	Created        time.Time `db:"created" json:"created"`
+	CreatedBy      string    `db:"created_by" json:"created_by"`
+	Updated        time.Time `db:"updated" json:"updated"`
+	UpdatedBy      string    `db:"updated_by" json:"updated_by"`
+}
